src/styles/main.scss
@use 'variables' as *;
@use 'mixins' as *;
@use 'fonts' as *;

body {
  font-family: $font-sans;
}

h1, h2, h3, h4 {
  font-family: $font-serif;
}

.code {
  font-family: $font-mono;
}

*, *::before, *::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  scroll-behavior: smooth;
  overflow-x: hidden;
}

body {
  font-family: $font-sans;
  color: $text-dark;
  background-color: $white;;
  line-height: 1.6;
  min-height: 100vh;
  overflow-x: hidden;
}

section {
  padding: $section-padding;
}

@media (max-width: $mobile) {
  section {
    padding: $section-padding-mobile;
  }
}

img {
  max-width: 100%;
  display: block;
}

button,
a {
  cursor: pointer;
}

a {
  text-decoration: none;
  color: inherit;
}

h1, h2, h3, h4 {
  font-family: $font-serif;
  line-height: 1.2;
}
.container{
  max-width: 1464px;
  margin: 0 auto;
  padding: 0 5px;
}
.hidden{
  display: none;
}

